# TopoPyScale-MODIS

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_config.py  test_ingest.py  test_partition.py  test_pipeline_roundtrip.py  test_toposcale.py
topopyscale_modis/: __init__.py  _cli.py  config.py  fetch_era5.py  fetch_era5_arco.py  ingest.py  partition.py  toposcale.py
